--- a/Portfolio/wwwroot/index.html
+++ b/Portfolio/wwwroot/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/graph.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
 
