--- a/Portfolio/wwwroot/index.html
+++ b/Portfolio/wwwroot/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Porftolio Developer .Net Blazor fullstack Martin Lopez Ruibio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="robots" content="index,follow"/>
     <title>Portfolio</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
