--- a/Portfolio/wwwroot/index.html
+++ b/Portfolio/wwwroot/index.html
@@ -16,9 +16,9 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/graph.js"></script>
+    <script defer src="https://platform.linkedin.com/badges/js/profile.js" async type="text/javascript"></script><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="js/graph.js"></script>
 </head>
 
 <body>
